# SelectStar_SV_Solution

./: .bumpversion.cfg  .gitignore  .travis.yml  CONTRIBUTING.rst  HISTORY.rst  LICENSE  README.rst  pyproject.toml  requirements.txt  setup.cfg  tox.ini
.github/: ISSUE_TEMPLATE.md
docs/: Makefile  conf.py  index.rst  installation.rst  make.bat  usage.rst
frontend/: package.json  tailwind.config.js
frontend/src/: App.vue
frontend/src/components/: Footer.vue  Header.vue  Layout.vue
src/: __init__.py
src/app/: main.py
tests/: test_selectstar_sv_solution.py
