[tool]
[tool.poetry]
name = "SelectStar_SV_Solution"
version = "0.1.1"
homepage = "https://selectstar-sv-solution.readthedocs.io"
description = "Solution submitted by SugiV for Select Star TLM take home exercise"
authors = ["Sugi Venugeethan <sugi205@gmail.com>"]
license = "Apache Software License 2.0"
readme = "README.rst"
repository = "https://github.com/sugix/SelectStar_SV_Solution"



packages = [
    { include = "selectstar_sv_solution", from = "src"},
]

classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.4",
    "Programming Language :: Python :: 3.5",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
]
[tool.poetry.dependencies]
# List project dependencies here
python = ">=3.7.1,<4.0"
click = "*"
fastapi = "^0.63.0"
uvicorn = "^0.13.4"
pandas = "^1.2.4"
pyjarowinkler = "^1.8"
scikit-learn = "^0.24.1"

[tool.poetry.dev-dependencies]
bump2version = "^0.5.0"
pip = "^18.1"
wheel = "^0.32.1"
watchdog = "^0.9.0"
flake8 = "^3.5.0"
tox = "^3.5.2"
coverage = "^4.5.1"
Sphinx = "^1.8.1"
twine = "^1.12.1"

pytest = "^3.8.2"
pytest-runner = "^4.2"
pytest-cov = "^2.6.0"
setuptools = "^40.5.0"
rstcheck = "^3.3.1"
ptpython = "^2.0.4"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
